ci: Fix Guzzle 5
Since we install `php-http/guzzle6-adapter` by default and our Guzzle 5 CI job just removes it and installs `php-http/guzzle5-adapter` instead, we already have a lockfile, which prevents installation of the older adapter:

    Your requirements could not be resolved to an installable set of packages.

      Problem 1
        - Root composer.json requires php-http/guzzle5-adapter * -> satisfiable by php-http/guzzle5-adapter[dev-master, v0.1.0, ..., v0.6.0, v1.0.0, v1.0.1, 2.0.0, 2.0.x-dev].
        - guzzlehttp/guzzle[5.1.0, ..., 5.2.0] require guzzlehttp/ringphp ~1.0 -> satisfiable by guzzlehttp/ringphp[1.0.0, ..., 1.1.x-dev].
        - guzzlehttp/guzzle[5.3.0, ..., 5.3.1] require guzzlehttp/ringphp ^1.1 -> satisfiable by guzzlehttp/ringphp[1.1.0, 1.1.1, 1.1.x-dev].
        - guzzlehttp/guzzle[5.3.2, ..., 5.3.x-dev] require react/promise ^2.2 -> found react/promise[v2.2.0, ..., 2.x-dev] but the package is fixed to v3.2.0 (lock file version) by a partial update and that version does not match. Make sure you list it as an argument for the update command.
        - guzzlehttp/ringphp[1.0.0, ..., 1.1.x-dev] require react/promise ~2.0 -> found react/promise[v2.0.0, ..., 2.x-dev] but the package is fixed to v3.2.0 (lock file version) by a partial update and that version does not match. Make sure you list it as an argument for the update command.
        - php-http/guzzle5-adapter v0.1.0 requires php-http/discovery ^0.1 -> found php-http/discovery[v0.1.0, v0.1.1] but it conflicts with your root composer.json require (^1.19).
        - php-http/guzzle5-adapter v0.1.1 requires php-http/httplug ^1.0.0-beta -> found php-http/httplug[v1.0.0-beta, v1.0.0-RC1, v1.0.0, v1.1.0] but it conflicts with your root composer.json require (^2.4).
        - php-http/guzzle5-adapter[v0.2.0, ..., v0.6.0, v1.0.0, ..., v1.0.1] require php-http/httplug ^1.0 -> found php-http/httplug[v1.0.0-alpha, ..., v1.1.0] but it conflicts with your root composer.json require (^2.4).
        

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -167,7 +167,7 @@ jobs:
       - name: "Setup adapter: Guzzle 5"
         run: |
           composer remove guzzlehttp/guzzle php-http/guzzle6-adapter --dev -n
-          composer require php-http/guzzle5-adapter --dev -n
+          composer require php-http/guzzle5-adapter --dev -n --with-all-dependencies
 
       - name: "Setup logs"
         run: "mkdir -p build/logs"
