--- a/composer.json
+++ b/composer.json
@@ -41,10 +41,11 @@
         "php-http/guzzle7-adapter": "^1.0",
         "php-http/mock-client": "^1.4",
         "phpstan/extension-installer": "^1.0",
-        "phpstan/phpstan": "^1.12",
-        "phpstan/phpstan-deprecation-rules": "^1.0",
-        "phpstan/phpstan-phpunit": "^1.0",
-        "rector/rector": "^0.12.11",
+        "phpstan/phpstan": "^2.0",
+        "phpstan/phpstan-deprecation-rules": "^2.0",
+        "phpstan/phpstan-phpunit": "^2.0",
+        "rector/rector": "^2.0.0",
+        "symfony/filesystem": "^5.4",
         "symfony/phpunit-bridge": "^7.0.1"
     },
     "autoload": {
