--- a/composer.json
+++ b/composer.json
@@ -21,9 +21,9 @@
         "fossar/htmlawed": "^1.3.3",
         "guzzlehttp/psr7": "^2.0",
         "j0k3r/graby-site-config": "^1.0.181",
-        "j0k3r/httplug-ssrf-plugin": "^2.0|^3.0",
-        "j0k3r/php-readability": "^1.2.9",
-        "monolog/monolog": "^1.18.0|^2.3",
+        "j0k3r/httplug-ssrf-plugin": "^3.0",
+        "j0k3r/php-readability": "^1.3",
+        "monolog/monolog": "^3.0",
         "php-http/client-common": "^2.7",
         "php-http/discovery": "^1.19",
         "php-http/httplug": "^2.4",
